[gd_scene load_steps=7 format=3 uid="uid://blv7r5folt1d5"]

[ext_resource type="Script" uid="uid://bwfhs05dq8dhm" path="res://src/logic/player/player.gd" id="1_5bfm2"]
[ext_resource type="PackedScene" uid="uid://dvu5i0n51gph3" path="res://src/decentraland_components/avatar/avatar.tscn" id="2_n22nx"]
[ext_resource type="PackedScene" uid="uid://cbtq7kaarx6mp" path="res://src/logic/player/camera_mode_area_detector.tscn" id="2_rco65"]
[ext_resource type="PackedScene" uid="uid://b4mbs03r7lad8" path="res://src/logic/player/outline_system.tscn" id="3_outline"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_3217e"]
length = 1.0779

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pxti1"]
margin = 0.05
radius = 0.25
height = 1.5

[node name="Player" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_5bfm2")

[node name="CollisionShape3D_ContactPoint" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.1, 0)
shape = SubResource("SeparationRayShape3D_3217e")

[node name="CollisionShape3D_Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_pxti1")

[node name="camera_mode_area_detector" parent="." instance=ExtResource("2_rco65")]
collision_layer = 2147483904
collision_mask = 2147483904

[node name="Mount" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 1.71, 0)

[node name="Camera3D" type="DclCamera3D" parent="Mount"]
smoothing_speed = 2.0
target_fov = 75.0
cull_mask = 524287
far = 100.0

[node name="AvatarRaycast" type="RayCast3D" parent="Mount/Camera3D"]
target_position = Vector3(0, 0, -10)
collision_mask = 536870912
collide_with_areas = true
collide_with_bodies = false

[node name="OutlineSystem" parent="Mount/Camera3D" instance=ExtResource("3_outline")]

[node name="Avatar" parent="." instance=ExtResource("2_n22nx")]
skip_process = true

[node name="AudioStreamPlayer_Camera" type="AudioStreamPlayer" parent="."]
bus = &"UI"

[connection signal="block_camera_mode" from="camera_mode_area_detector" to="." method="_on_camera_mode_area_detector_block_camera_mode"]
[connection signal="unblock_camera_mode" from="camera_mode_area_detector" to="." method="_on_camera_mode_area_detector_unblock_camera_mode"]
[connection signal="visibility_changed" from="Avatar" to="." method="_on_avatar_visibility_changed"]
